@@ -27,7 +27,7 @@
 int	cmp_double(double a,double b);
 int	find_char(char *str,char c);
 int	evaluate_expression(int *result,char *expression, char *error, int maxerrlen);
-void	substitute_macros(DB_TRIGGER *trigger, DB_ACTION *action, char *data, int dala_max_len);
+void	substitute_macros(int alarmid, DB_TRIGGER *trigger, DB_ACTION *action, char *data, int dala_max_len);
 int     evaluate_expression (int *result,char *expression,char *error,int maxerrlen);
 void	delete_reol(char *c);
 
@@ -35,6 +35,6 @@ void	delete_reol(char *c);
 #define MACRO_TYPE_MESSAGE_SUBJECT	2
 #define MACRO_TYPE_MESSAGE_BODY		4
 
-void	substitute_simple_macros(DB_TRIGGER *trigger, DB_ACTION *action, char *data, int dala_max_len, int macro_type);
+void	substitute_simple_macros(int alarmid, DB_TRIGGER *trigger, DB_ACTION *action, char *data, int dala_max_len, int macro_type);
 	
 #endif
